# Bitfa-Trader

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
config/: __init__.py  celery.py  settings.py  urls.py
core/management/commands/: runbot.py
dashboard/: urls.py  views.py
dashboard/templates/dashboard/: index.html
signals/: admin.py  listener.py  models.py  parser.py
signals/migrations/: 0001_initial.py
trading/: admin.py  manager.py  models.py  tasks.py
trading/lbank/: __init__.py  client.py
trading/migrations/: 0001_initial.py
